# balldetec

./: CMakeLists.txt  README.md  Rebuild.sh  campo.txt  img_processing.cpp  img_processing.h  main.cpp
